--- a/index.html
+++ b/index.html
@@ -2797,7 +2797,7 @@ style='font-size:11.5pt;font-family:"Source Sans Pro",sans-serif;color:#333333'>
 <p style='margin:0cm;margin-bottom:.0001pt;background:white'><span
 style='font-size:11.5pt;font-family:"Source Sans Pro",sans-serif;color:#333333'>Download
 FAQ/tanya-jawab ini dalam bentuk dokumen klik link berikut: </span><a
-href="https://widiopranoto.github.io/FAQ_PPDB/FAQ_PPDB.pdf"><span
+href=""><span
 style='font-size:11.5pt;font-family:"Source Sans Pro",sans-serif'>(diedit karena panitia PPDB 2021 belum terbentuk)</span></a><span
 style='font-size:11.5pt;font-family:"Source Sans Pro",sans-serif;color:#333333'><o:p></o:p></span></p>
 
